--- a/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
@@ -35,24 +35,14 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#adbf93" height="120.0" layoutY="600.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
       <Group layoutX="161.0" layoutY="443.0">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" onMouseClicked="#handleCharacterLeftClicked" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
-               <image>
-                  <Image url="@../images/Character_01.gif" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="808.0" layoutY="6.0" onMouseClicked="#handleCharacterRightClicked" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
-               <image>
-                  <Image url="@../images/Character_02.gif" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="55.0" fitWidth="47.0" layoutX="107.0" layoutY="-3.0" onMouseClicked="#handleFrisbeeClicked" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
+            <fx:include source="CharacterLeftView.fxml" />
+            <fx:include source="CharacterRightView.fxml" />
+            <ImageView fitHeight="55.0" fitWidth="47.0" layoutX="169.0" layoutY="19.0" onMouseClicked="#handleFrisbeeClicked" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
                <image>
                   <Image url="@../images/Frisbee_2.gif" />
                </image>
             </ImageView>
             <Label fx:id="labelFrisbee" layoutX="175.0" layoutY="9.0" />
-            <Label fx:id="labelCharacterLeft" layoutX="138.0" layoutY="100.0" />
-            <Label fx:id="labelCharacterRight" layoutX="696.0" layoutY="100.0" />
          </children>
       </Group>
       <Label fx:id="labelCountdown" alignment="TOP_CENTER" layoutX="625.0" layoutY="55.0" />
