Character click events are working

--- a/frontend/src/main/resources/puf/frisbee/frontend/view/CharacterRightView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/CharacterRightView.fxml
@@ -8,7 +8,7 @@
 <Pane xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.CharacterRightView">
  <children>
      <Label fx:id="labelCharacterRight" layoutX="808.0" />
-      <ImageView fitHeight="225.0" fitWidth="300.0" layoutX="808.0" onMouseClicked="#handleCharacterRightClicked" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="225.0" fitWidth="300.0" layoutX="808.0" layoutY="5.0" onMouseClicked="#handleCharacterRightClicked" pickOnBounds="true" preserveRatio="true">
           <image>
               <Image url="@../images/Character_02.gif" />
           </image>
