--- a/frontend/src/main/resources/puf/frisbee/frontend/view/CharacterLeftView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/CharacterLeftView.fxml
@@ -7,7 +7,7 @@
 
 <Pane xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.CharacterLeftView">
  <children>
-     <Label fx:id="labelCharacterLeft" />
+     <Label fx:id="labelCharacterLeft" layoutX="230.0" layoutY="15" />
       <ImageView fitHeight="225.0" fitWidth="300.0" onMouseClicked="#handleCharacterLeftClicked" pickOnBounds="true" preserveRatio="true">
           <image>
               <Image url="@../images/Character_01.gif" />
