Redesigned the level-success-dialog with pure JavaFX and CSS.

--- a/frontend/src/main/resources/puf/frisbee/frontend/css/level.css
+++ b/frontend/src/main/resources/puf/frisbee/frontend/css/level.css
@@ -1,5 +1,29 @@
-/* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
-
 .root {
-	-fx-background-color: lightblue;
+	-fx-background-image: url("../images/landscape_autumn.png");
+	-fx-background-size: contain;
+}
+
+.modal-background {
+	-fx-background-color: rgba(0, 0, 0, 0.4);
+}
+
+.dialog-background {
+	-fx-background-color: rgba(0, 0, 0, 0.8);
+}
+
+.dialog-text {
+	-fx-font-family: "sans-serif";
+	-fx-font-size: 14px;
+	-fx-padding: 10px 20px;
+	-fx-text-fill: rgba(255, 255, 255, 1);
+}
+
+.dialog-h1 {
+	-fx-font-size: 20px;
+	-fx-font-weight: bold;
+}
+
+.button {
+	-fx-background-color: rgba(255, 255, 255, 1);
+	-fx-text-fill: rgba(0, 0, 0, 0.8);
 }
