--- a/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXDialog?>
-<?import com.jfoenix.controls.JFXDialogLayout?>
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Group?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,7 +12,6 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
@@ -23,27 +21,37 @@ sollte der Wert des xmlns-Attributs stets geprüft und ggf. manuell
 von "http://javafx.com/javafx/17" auf "http://javafx.com/javafx/15.0.1" 
 angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.LevelView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@../css/level.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.LevelView">
    <children>
-      <ImageView fitHeight="720.0" fitWidth="1280.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/landscape_autumn.png" />
-         </image>
-      </ImageView>
-	<StackPane fx:id="modalRoot" prefHeight="720.0" prefWidth="1280.0">
+      <VBox fx:id="modalRoot" alignment="CENTER" layoutY="80.0" prefHeight="600.0" prefWidth="1280.0">
          <children>
-            <JFXDialog fx:id="levelSuccessDialog" prefHeight="313.0" prefWidth="433.0">
-               <JFXDialogLayout>
-                  <heading>
-                     <Label fx:id="labelLevelSuccess" />
-                  </heading>
-                  <actions>
-                     <JFXButton fx:id="buttonLevelContinue" onAction="#handleLevelContinueClicked" />
-                  </actions>
-               </JFXDialogLayout>
-            </JFXDialog>
+            <GridPane fx:id="levelSuccessDialog" maxHeight="270.0" maxWidth="480.0" minHeight="90.0" minWidth="160.0" prefHeight="180.0" prefWidth="320.0" styleClass="dialog-background" stylesheets="@../css/level.css">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="labelLevelSuccess" stylesheets="@../css/level.css" wrapText="true" GridPane.columnSpan="2147483647">
+                     <styleClass>
+                        <String fx:value="dialog-text" />
+                        <String fx:value="dialog-h1" />
+                     </styleClass>
+                  </Label>
+                  <Label styleClass="dialog-text" stylesheets="@../css/level.css" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+                  <Button fx:id="buttonLevelContinue" mnemonicParsing="false" onAction="#handleLevelContinueClicked" stylesheets="@../css/level.css" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
+                     </GridPane.margin>
+                  </Button>
+               </children>
+            </GridPane>
          </children>
-      </StackPane>
+      </VBox>
       <Group layoutX="161.0" layoutY="410.0">
          <children>
             <ImageView fitHeight="257.0" fitWidth="150.0" onMouseClicked="#handleCharacterLeftClicked" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
@@ -68,7 +76,7 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
       </Group>
       <Group>
          <children>
-            <Rectangle height="80.0" opacity="0.7" stroke="BLACK" strokeType="INSIDE" width="1280.0" />
+            <Rectangle height="80.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
             <GridPane hgap="20.0" prefHeight="80.0" prefWidth="1280.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="975.5" minWidth="10.0" prefWidth="947.5" />
@@ -82,33 +90,47 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
                      <children>
                         <VBox alignment="CENTER_LEFT">
                            <children>
-                              <Label text="TEAM" textFill="WHITE">
+                              <Label text="YOUR TEAM" textFill="WHITE">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <Label layoutX="10.0" layoutY="10.0" text="Bonnie &amp; Clyde" textFill="WHITE">
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                              </Label>
+                              <HBox alignment="CENTER_LEFT">
+                                 <children>
+                                    <Label fx:id="labelPlayerLeft" text="Bonnie" textFill="WHITE">
+                                       <font>
+                                          <Font size="24.0" />
+                                       </font>
+                                    </Label>
+                                    <Label layoutX="10.0" layoutY="10.0" text=" &amp; " textFill="WHITE">
+                                       <font>
+                                          <Font size="24.0" />
+                                       </font>
+                                    </Label>
+                                    <Label fx:id="labelPlayerRight" layoutX="165.0" layoutY="10.0" text="Clyde" textFill="WHITE">
+                                       <font>
+                                          <Font size="24.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </HBox>
                            </children>
                         </VBox>
-                        <VBox alignment="CENTER_LEFT" layoutX="215.0" layoutY="10.0">
+                        <VBox alignment="CENTER_LEFT">
                            <children>
-                              <Label text="LEVEL" textFill="WHITE">
+                              <Label text="THIS LEVEL" textFill="WHITE">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="labelCountdown2" alignment="TOP_CENTER" text="1" textFill="WHITE">
+                              <Label fx:id="labelLevel" alignment="TOP_CENTER" text="1" textFill="WHITE">
                                  <font>
                                     <Font size="24.0" />
                                  </font>
                               </Label>
                            </children>
                         </VBox>
-                        <VBox alignment="CENTER_LEFT" layoutX="20.0" layoutY="20.0">
+                        <VBox alignment="CENTER_LEFT">
                            <children>
                               <Label text="TIME REMAINING" textFill="WHITE">
                                  <font>
@@ -122,28 +144,14 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
                               </Label>
                            </children>
                         </VBox>
-                        <VBox alignment="CENTER_LEFT" layoutX="215.0" layoutY="20.0">
+                        <VBox alignment="CENTER_LEFT">
                            <children>
                               <Label text="CURRENT SCORE" textFill="WHITE">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="labelCountdown1" alignment="TOP_CENTER" text="123" textFill="WHITE">
-                                 <font>
-                                    <Font size="24.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </VBox>
-                        <VBox alignment="CENTER_LEFT" layoutX="361.0" layoutY="20.0">
-                           <children>
-                              <Label text="HIGHEST SCORE" textFill="WHITE">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                              <Label fx:id="labelCountdown11" alignment="TOP_CENTER" text="1001" textFill="WHITE">
+                              <Label fx:id="labelScore" alignment="TOP_CENTER" text="123" textFill="WHITE">
                                  <font>
                                     <Font size="24.0" />
                                  </font>
@@ -193,7 +201,7 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
       </Group>
       <Group>
          <children>
-            <Rectangle height="40.0" layoutY="680.0" opacity="0.7" stroke="BLACK" strokeType="INSIDE" width="1280.0" />
+            <Rectangle height="40.0" layoutY="680.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
             <HBox alignment="CENTER_LEFT" layoutY="680.0" prefHeight="40.0" prefWidth="1280.0">
                <children>
                   <Label text="Use up and down arrow keys to jump." textFill="WHITE">
