--- a/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
@@ -21,37 +21,8 @@ sollte der Wert des xmlns-Attributs stets geprüft und ggf. manuell
 von "http://javafx.com/javafx/17" auf "http://javafx.com/javafx/15.0.1" 
 angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@../css/level.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.LevelView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@../css/level.css" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.LevelView">
    <children>
-      <VBox fx:id="modalRoot" alignment="CENTER" layoutY="80.0" prefHeight="600.0" prefWidth="1280.0">
-         <children>
-            <GridPane fx:id="levelSuccessDialog" maxHeight="270.0" maxWidth="480.0" minHeight="90.0" minWidth="160.0" prefHeight="180.0" prefWidth="320.0" styleClass="dialog-background" stylesheets="@../css/level.css">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" />
-                  <ColumnConstraints />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints vgrow="SOMETIMES" />
-                <RowConstraints vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label fx:id="labelLevelSuccess" stylesheets="@../css/level.css" wrapText="true" GridPane.columnSpan="2147483647">
-                     <styleClass>
-                        <String fx:value="dialog-text" />
-                        <String fx:value="dialog-h1" />
-                     </styleClass>
-                  </Label>
-                  <Label styleClass="dialog-text" stylesheets="@../css/level.css" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
-                  <Button fx:id="buttonLevelContinue" mnemonicParsing="false" onAction="#handleLevelContinueClicked" stylesheets="@../css/level.css" GridPane.columnIndex="1" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
-                     </GridPane.margin>
-                  </Button>
-               </children>
-            </GridPane>
-         </children>
-      </VBox>
       <Group layoutX="161.0" layoutY="410.0">
          <children>
             <fx:include source="CharacterRightView.fxml" />
@@ -204,6 +175,35 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
                   <Insets left="10.0" right="10.0" />
                </padding>
             </HBox>
+         </children>
+      </Group>
+      <Group layoutX="480.0" layoutY="270.0">
+         <children>
+            <GridPane fx:id="levelSuccessDialog" maxHeight="270.0" maxWidth="480.0" minHeight="90.0" minWidth="160.0" prefHeight="180.0" prefWidth="320.0" styleClass="dialog-background" stylesheets="@../css/level.css">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" />
+                  <ColumnConstraints />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+                <RowConstraints vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="labelLevelSuccess" stylesheets="@../css/level.css" wrapText="true" GridPane.columnSpan="2147483647">
+                     <styleClass>
+                        <String fx:value="dialog-text" />
+                        <String fx:value="dialog-h1" />
+                     </styleClass>
+                  </Label>
+                  <Label styleClass="dialog-text" stylesheets="@../css/level.css" wrapText="true" GridPane.columnSpan="2147483647" GridPane.rowIndex="1" />
+                  <Button fx:id="buttonLevelContinue" mnemonicParsing="false" onAction="#handleLevelContinueClicked" stylesheets="@../css/level.css" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets bottom="15.0" left="20.0" right="20.0" top="15.0" />
+                     </GridPane.margin>
+                  </Button>
+               </children>
+            </GridPane>
          </children>
       </Group>
    </children>
