--- a/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,11 +8,11 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@../css/waiting.css" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.WaitingView">
    <children>
-      <JFXButton fx:id="startButton" layoutX="625.0" layoutY="348.0" onMouseClicked="#handleStartButtonClicked" text="Start" />
-      <Text fx:id="startText" layoutX="469.0" layoutY="260.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Warte auf zweites Monster, um das Spiel zu beginnen..." />
-      <ImageView fx:id="frisbee" fitHeight="62.0" fitWidth="138.0" layoutX="698.0" layoutY="317.0" pickOnBounds="true" preserveRatio="true">
+      <Button fx:id="startButton" layoutX="605.0" layoutY="420.0" mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" text="Los geht's!" />
+      <Text fx:id="startText" layoutX="469.0" layoutY="260.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Warte auf das zweite Monster, um das Spiel zu beginnen..." />
+      <ImageView fx:id="frisbee" fitHeight="97.0" fitWidth="90.0" layoutX="605.0" layoutY="295.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../images/frisbee.png" />
+            <Image url="@../images/Frisbee_2.gif" />
          </image>
       </ImageView>
    </children>
