--- a/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.WaitingView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.WaitingView">
    <children>
-      <Button fx:id="startButton" layoutX="605.0" layoutY="439.0" mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" text="Los geht's!" />
-      <Text fx:id="startText" layoutX="458.0" layoutY="279.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Warte auf das zweite Monster, um das Spiel zu beginnen..." />
-      <ImageView fx:id="frisbee" fitHeight="97.0" fitWidth="90.0" layoutX="605.0" layoutY="315.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../images/Frisbee_2.gif" />
-         </image>
-      </ImageView>
+      <VBox alignment="CENTER" layoutY="200.0" prefHeight="320.0" prefWidth="1280.0" spacing="20.0">
+         <children>
+            <Text fx:id="startText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="dialog-text" text="Warte auf das zweite Monster, um das Spiel zu beginnen ...">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Text>
+            <Circle fill="#ffffff00" radius="40.0" stroke="TRANSPARENT" strokeType="INSIDE" strokeWidth="0.0" />
+            <Button fx:id="startButton" mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" stylesheets="@../css/main.css" text="Los geht's!" />
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" prefHeight="720.0" prefWidth="1280.0">
+         <children>
+            <ImageView fx:id="frisbee" fitHeight="97.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../images/Frisbee_2.gif" />
+               </image>
+            </ImageView>
+         </children>
+      </VBox>
    </children>
    <stylesheets>
       <URL value="@../css/main.css" />
