--- a/frontend/src/main/resources/puf/frisbee/frontend/view/HighscoreView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/HighscoreView.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.HighscoreView">
    <children>
       <VBox alignment="TOP_CENTER" layoutY="81.0" prefHeight="585.0" prefWidth="1280.0" spacing="20.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="81.0">
@@ -25,9 +26,21 @@
             <Button mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" stylesheets="@../css/main.css" text="Neues Spiel starten" />
             <TableView fx:id="highscoreTable" blendMode="MULTIPLY" editable="true" prefHeight="200.0" prefWidth="849.0" styleClass="highscore-table">
               <columns>
-                <TableColumn prefWidth="564.8964691162109" text="Team" />
-                  <TableColumn minWidth="0.0" prefWidth="144.603515625" text="Level" />
-                <TableColumn prefWidth="170.07550048828125" text="Punkte" />
+                <TableColumn prefWidth="564.8964691162109" text="Team">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="name"/>
+                    </cellValueFactory>
+                </TableColumn>
+                  <TableColumn minWidth="0.0" prefWidth="144.603515625" text="Level" >
+                      <cellValueFactory>
+                          <PropertyValueFactory property="level"/>
+                      </cellValueFactory>
+                  </TableColumn>
+                <TableColumn prefWidth="170.07550048828125" text="Punkte">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="score"/>
+                    </cellValueFactory>
+                </TableColumn>
               </columns>
                <VBox.margin>
                   <Insets top="20.0" />
