--- a/frontend/src/main/resources/puf/frisbee/frontend/view/HighscoreView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/HighscoreView.fxml
@@ -6,11 +6,12 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<?import javafx.scene.control.cell.PropertyValueFactory?>
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.HighscoreView">
    <children>
       <VBox alignment="TOP_CENTER" layoutY="81.0" prefHeight="585.0" prefWidth="1280.0" spacing="20.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="81.0">
@@ -24,28 +25,35 @@
                </VBox.margin>
             </Label>
             <Button mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" stylesheets="@../css/main.css" text="Neues Spiel starten" />
-            <TableView fx:id="highscoreTable" blendMode="MULTIPLY" editable="true" prefHeight="200.0" prefWidth="849.0" styleClass="highscore-table">
+            <TableView fx:id="highscoreTable" editable="true" prefHeight="318.0" prefWidth="880.0" styleClass="highscore-table">
               <columns>
                 <TableColumn prefWidth="564.8964691162109" text="Team">
                     <cellValueFactory>
-                        <PropertyValueFactory property="name"/>
+                        <PropertyValueFactory property="name" />
                     </cellValueFactory>
                 </TableColumn>
-                  <TableColumn minWidth="0.0" prefWidth="144.603515625" text="Level" >
+                  <TableColumn minWidth="0.0" prefWidth="144.603515625" text="Level">
                       <cellValueFactory>
-                          <PropertyValueFactory property="level"/>
+                          <PropertyValueFactory property="level" />
                       </cellValueFactory>
                   </TableColumn>
                 <TableColumn prefWidth="170.07550048828125" text="Punkte">
                     <cellValueFactory>
-                        <PropertyValueFactory property="score"/>
+                        <PropertyValueFactory property="score" />
                     </cellValueFactory>
                 </TableColumn>
               </columns>
                <VBox.margin>
-                  <Insets top="20.0" />
+                  <Insets bottom="20.0" top="20.0" />
                </VBox.margin>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+               <effect>
+                  <Blend />
+               </effect>
             </TableView>
+            <Button mnemonicParsing="false" onMouseClicked="#handleRefreshButtonClicked" stylesheets="@../css/main.css" text="Refresh" />
          </children>
       </VBox>
    </children>
