renamed attributes to specify the team relation more clearly

--- a/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
@@ -57,7 +57,7 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <Label fx:id="labelTeam" textFill="WHITE">
+                              <Label fx:id="labelTeamName" textFill="WHITE">
                                  <font>
                                     <Font size="24.0" />
                                  </font>
