--- a/frontend/src/main/resources/puf/frisbee/frontend/view/HighscoreView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/HighscoreView.fxml
@@ -29,17 +29,17 @@
               <columns>
                 <TableColumn prefWidth="564.8964691162109" text="Team">
                     <cellValueFactory>
-                        <PropertyValueFactory property="team" />
+                        <PropertyValueFactory property="teamName" />
                     </cellValueFactory>
                 </TableColumn>
                   <TableColumn minWidth="0.0" prefWidth="144.603515625" text="Level">
                       <cellValueFactory>
-                          <PropertyValueFactory property="level" />
+                          <PropertyValueFactory property="teamLevel" />
                       </cellValueFactory>
                   </TableColumn>
                 <TableColumn fx:id="highscoreScore" prefWidth="170.07550048828125" text="Score">
                     <cellValueFactory>
-                        <PropertyValueFactory property="score" />
+                        <PropertyValueFactory property="teamScore" />
                     </cellValueFactory>
                 </TableColumn>
               </columns>
