--- a/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
+++ b/frontend/src/main/resources/puf/frisbee/frontend/css/main.css
@@ -18,6 +18,11 @@
     -fx-font-weight: bold;
 }
 
+.dialog-game-over {
+    -fx-font-size: 160px;
+    -fx-font-weight: bold;
+}
+
 .button {
     -fx-background-color: rgba(255, 255, 255, 1);
     -fx-text-fill: rgba(0, 0, 0, 0.8);
