--- a/frontend/src/main/resources/puf/frisbee/frontend/view/CharacterLeftView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/CharacterLeftView.fxml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.CharacterLeftView">
  <children>
-     <ImageView fitHeight="257.0" fitWidth="150.0" onMouseClicked="#handleCharacterLeftClicked" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
+     <ImageView fx:id="character" fitHeight="257.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
          <image>
              <Image url="@../images/Character_01.gif" />
          </image>
      </ImageView>
-     <Label fx:id="labelCharacterLeft" layoutX="138.0" layoutY="100.0" />
  </children>
 </Pane>
