--- a/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/LevelView.fxml
@@ -22,12 +22,12 @@ sollte der Wert des xmlns-Attributs stets geprüft und ggf. manuell
 von "http://javafx.com/javafx/17" auf "http://javafx.com/javafx/15.0.1" 
 angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.LevelView">
+<AnchorPane onKeyPressed="#handleKeyPressed" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.LevelView">
    <children>
       <Group layoutX="161.0" layoutY="410.0">
          <children>
+            <fx:include fx:id="characterLeft" source="CharacterLeftView.fxml" />
             <fx:include source="CharacterRightView.fxml" />
-            <fx:include source="CharacterLeftView.fxml" />
             <ImageView fitHeight="55.0" fitWidth="47.0" layoutX="107.0" layoutY="-3.0" onMouseClicked="#handleFrisbeeClicked" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
                <image>
                   <Image url="@../images/Frisbee_2.gif" />
