--- a/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/WaitingView.fxml
@@ -1,26 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.WaitingView">
    <children>
-      <VBox alignment="CENTER" layoutY="200.0" prefHeight="320.0" prefWidth="1280.0" spacing="20.0">
+      <VBox alignment="CENTER" layoutY="240.0" prefWidth="1280.0">
          <children>
-            <Text fx:id="startText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="dialog-text" text="Warte auf das zweite Monster, um das Spiel zu beginnen ...">
-               <VBox.margin>
-                  <Insets />
-               </VBox.margin>
-            </Text>
-            <Circle fill="#ffffff00" radius="40.0" stroke="TRANSPARENT" strokeType="INSIDE" strokeWidth="0.0" />
+            <Text fx:id="startText" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="dialog-text" text="Warte auf das zweite Monster, um das Spiel zu beginnen ..." />
+         </children>
+      </VBox>
+      <VBox alignment="CENTER" layoutY="420.0" prefWidth="1280.0" spacing="20.0">
+         <children>
             <Button fx:id="startButton" mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" stylesheets="@../css/main.css" text="Los geht's!" />
+            <Button mnemonicParsing="false" onAction="#handleButtonQuitGameClicked" stylesheets="@../css/main.css" text="Quit Game" />
          </children>
       </VBox>
       <VBox alignment="CENTER" layoutY="310.0" prefHeight="90.0" prefWidth="1280.0">
