trigger game over dialog implemented

--- a/frontend/src/main/resources/puf/frisbee/frontend/css/level.css
+++ b/frontend/src/main/resources/puf/frisbee/frontend/css/level.css
@@ -1,5 +1,5 @@
 .root {
-	-fx-background-image: url("../images/landscape_autumn.png");
+	-fx-background-image: url("../images/level01_bg.png");
 	-fx-background-size: contain;
 }
 
