--- a/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
@@ -32,7 +32,7 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
          <children>
             <ImageView fitHeight="55.0" fitWidth="47.0" layoutX="500.0" layoutY="300" onMouseClicked="#handleFrisbeeClicked" pickOnBounds="true" preserveRatio="true" scaleX="1.5" scaleY="1.5">
                <image>
-                  <Image url="@../images/Frisbee_2.gif" />
+                  <Image url="@../images/frisbee01.png" />
                </image>
             </ImageView>
             <Label fx:id="labelFrisbee" layoutX="500.0" layoutY="200" />
@@ -118,6 +118,7 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
             <Insets bottom="40.0" top="80.0" />
          </padding>
       </StackPane>
+      <Button layoutX="1180.0" layoutY="100.0" mnemonicParsing="false" onAction="#handleButtonOneLiveLost" text="one live lost" />
    </children>
    <stylesheets>
       <URL value="@../css/main.css" />
