--- a/frontend/src/main/resources/puf/frisbee/frontend/css/highscore.css
+++ b/frontend/src/main/resources/puf/frisbee/frontend/css/highscore.css
@@ -1,5 +1,5 @@
 .root {
-	-fx-background-image: url("../images/waitingbackground.png");
+	-fx-background-image: url("../images/waiting_bg.png");
 	-fx-background-size: contain;
 }
 
