--- a/frontend/src/main/resources/puf/frisbee/frontend/view/HighscoreView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/HighscoreView.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.net.URL?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -12,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.HighscoreView">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@../css/waiting.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.HighscoreView">
    <children>
       <VBox alignment="TOP_CENTER" layoutY="81.0" prefHeight="585.0" prefWidth="1280.0" spacing="20.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="81.0">
          <children>
@@ -25,7 +24,7 @@
                </VBox.margin>
             </Label>
             <Button mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" stylesheets="@../css/main.css" text="Neues Spiel starten" />
-            <TableView fx:id="highscoreTable" editable="true" prefHeight="318.0" prefWidth="880.0" styleClass="highscore-table">
+            <TableView fx:id="highscoreTable" editable="true" prefHeight="318.0" prefWidth="880.0" styleClass="highscore-table" stylesheets="@../css/highscore.css">
               <columns>
                 <TableColumn prefWidth="564.8964691162109" text="Team">
                     <cellValueFactory>
@@ -58,8 +57,4 @@
          </children>
       </VBox>
    </children>
-   <stylesheets>
-      <URL value="@../css/main.css" />
-      <URL value="@../css/highscore.css" />
-   </stylesheets>
 </AnchorPane>
