--- a/frontend/src/main/resources/puf/frisbee/frontend/view/TopPanel.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/TopPanel.fxml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
-<?import javafx.scene.image.ImageView?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Rectangle?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="puf.frisbee.frontend.view.TopPanelView"
-            prefHeight="400.0" prefWidth="600.0">
+<?import javafx.scene.text.Font?>
+
+<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.TopPanelView">
     <Group>
         <children>
             <Rectangle height="80.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
@@ -88,38 +92,66 @@
                             <Insets left="10.0" />
                         </padding>
                     </HBox>
-                    <HBox alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="758.0" spacing="10.0" GridPane.columnIndex="1">
+               <StackPane alignment="CENTER_RIGHT" GridPane.columnIndex="1">
+                  <children>
+                     <HBox alignment="CENTER_RIGHT" prefHeight="150.0" prefWidth="758.0" spacing="10.0">
                         <children>
-                            <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../images/Frisbee_2.gif" />
-                                </image>
-                            </ImageView>
-                            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="20.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../images/Frisbee_2.gif" />
-                                </image>
-                            </ImageView>
-                            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="90.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../images/Frisbee_2.gif" />
-                                </image>
-                            </ImageView>
-                            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="160.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../images/Frisbee_2.gif" />
-                                </image>
-                            </ImageView>
-                            <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="200.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
-                                <image>
-                                    <Image url="@../images/Frisbee_2.gif" />
-                                </image>
-                            </ImageView>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="20.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="90.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="160.0" layoutY="21.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
+                           <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="200.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                 <Image url="@../images/frisbee01.png" />
+                              </image>
+                           </ImageView>
                         </children>
+                        <opaqueInsets>
+                           <Insets />
+                        </opaqueInsets>
                         <padding>
-                            <Insets left="10.0" />
+                           <Insets left="10.0" />
                         </padding>
-                    </HBox>
+                        <StackPane.margin>
+                           <Insets right="10.0" />
+                        </StackPane.margin>
+                     </HBox>
+                          <HBox fx:id="overlaysTeamLives" alignment="CENTER_RIGHT" blendMode="MULTIPLY" prefHeight="150.0" prefWidth="758.0" spacing="10.0">
+                              <children>
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                           <Circle opacity="0.6" radius="25.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" visible="false" />
+                              </children>
+                              <padding>
+                                  <Insets left="10.0" />
+                              </padding>
+                        <opaqueInsets>
+                           <Insets />
+                        </opaqueInsets>
+                        <StackPane.margin>
+                           <Insets right="10.0" />
+                        </StackPane.margin>
+                          </HBox>
+                  </children>
+               </StackPane>
                 </children>
             </GridPane>
         </children>
