--- a/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/GameView.fxml
@@ -16,14 +16,8 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Font?>
 
-<!-- Da der SceneBuilder mit einer eigenen JRE-Version 17 arbeitet, 
-sollte der Wert des xmlns-Attributs stets geprüft und ggf. manuell 
-von "http://javafx.com/javafx/17" auf "http://javafx.com/javafx/15.0.1" 
-angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
-
-<AnchorPane onKeyPressed="#handleKeyPressed" onKeyReleased="#handleKeyReleased" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.GameView">
+<AnchorPane onKeyPressed="#handleKeyPressed" onKeyReleased="#handleKeyReleased" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.GameView">
    <children>
       <fx:include fx:id="topPanel" source="TopPanel.fxml" />
       <fx:include fx:id="characterLeft" source="CharacterLeftView.fxml" />
@@ -37,24 +31,7 @@ angepasst werden, um Fehlermeldungen in Eclipse zu vermeiden. -->
             </ImageView>
          </children>
       </Group>
-
-      <Group>
-         <children>
-            <Rectangle height="40.0" layoutY="680.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
-            <HBox alignment="CENTER_LEFT" layoutY="680.0" prefHeight="40.0" prefWidth="1280.0">
-               <children>
-                  <Label text="Use up and down arrow keys to jump." textFill="WHITE">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets left="10.0" right="10.0" />
-               </padding>
-            </HBox>
-         </children>
-      </Group>
+      <fx:include fx:id="bottomPanel" layoutY="680.0" source="BottomPanel.fxml" />
       <Group layoutX="480.0" layoutY="270.0">
          <children>
             <GridPane fx:id="levelSuccessDialog" maxHeight="270.0" maxWidth="480.0" minHeight="90.0" minWidth="160.0" prefHeight="180.0" prefWidth="320.0" styleClass="dialog-background" stylesheets="@../css/level.css">
