--- a/frontend/src/main/resources/puf/frisbee/frontend/view/StartView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/StartView.fxml
@@ -2,69 +2,196 @@
 
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.cell.PropertyValueFactory?>
-<?import javafx.scene.effect.Blend?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.StartView">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.StartView">
    <children>
-      <VBox alignment="TOP_CENTER" layoutY="81.0" prefHeight="585.0" prefWidth="1280.0" spacing="20.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="81.0">
+      <Group>
          <children>
-            <Label alignment="CENTER" text="FRISBEE" textAlignment="CENTER" textFill="#755656">
-               <font>
-                  <Font name="System Bold" size="42.0" />
-               </font>
-               <VBox.margin>
-                  <Insets bottom="6.0" />
-               </VBox.margin>
-            </Label>
-            <Label fx:id="labelGreeting" text="Hello stranger" />
-            <StackPane prefHeight="150.0" prefWidth="200.0">
+            <Rectangle height="80.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
+            <GridPane hgap="20.0" prefHeight="80.0" prefWidth="1280.0">
+               <columnConstraints>
+                  <ColumnConstraints maxWidth="975.5" minWidth="10.0" prefWidth="138.5" />
+                  <ColumnConstraints maxWidth="999.5" minWidth="10.0" prefWidth="744.5" />
+                  <ColumnConstraints maxWidth="384.0" minWidth="10.0" prefWidth="360.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <Button fx:id="buttonLoginRegister" mnemonicParsing="false" onMouseClicked="#handleLoginRegisterButtonClicked" stylesheets="@../css/main.css" text="Login / Register" />
-                  <Button fx:id="buttonLogout" mnemonicParsing="false" onMouseClicked="#handleLogoutButtonClicked" stylesheets="@../css/main.css" text="Logout" />
+                  <ImageView pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/FrizzbeeFreakz_Logo_TopPanel.png" />
+                     </image>
+                     <GridPane.margin>
+                        <Insets left="10.0" />
+                     </GridPane.margin>
+                  </ImageView>
+                  <HBox alignment="CENTER_LEFT" prefHeight="80.0" spacing="40.0" GridPane.columnIndex="1">
+                     <children>
+                        <VBox alignment="CENTER_LEFT">
+                           <children>
+                              <Label text="YOUR TEAM" textFill="WHITE">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="labelTeamName" text="Dick &amp; Doof" textFill="WHITE">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER_LEFT">
+                           <children>
+                              <Label text="LAST LEVEL" textFill="WHITE">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="labelLevel" alignment="TOP_CENTER" text="7" textFill="WHITE">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <VBox alignment="CENTER_LEFT">
+                           <children>
+                              <Label text="LAST SCORE" textFill="WHITE">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="labelScore" alignment="TOP_CENTER" text="123" textFill="WHITE">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </VBox>
+                        <Button fx:id="buttonStart" mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" styleClass="button-light" stylesheets="@../css/main.css" text="START PLAYING" />
+                     </children>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                  </HBox>
+                  <FlowPane alignment="CENTER_RIGHT" GridPane.columnIndex="2">
+                     <children>
+                        <Label fx:id="labelGreeting" styleClass="dialog-text" stylesheets="@../css/main.css" textAlignment="RIGHT">
+                           <FlowPane.margin>
+                              <Insets />
+                           </FlowPane.margin>
+                        </Label>
+                        <StackPane alignment="CENTER_LEFT">
+                           <children>
+                              <Button fx:id="buttonLoginRegister" mnemonicParsing="false" onMouseClicked="#handleLoginRegisterButtonClicked" styleClass="button-light" stylesheets="@../css/main.css" text="LOGIN / REGISTER" />
+                              <Button fx:id="buttonLogout" mnemonicParsing="false" onMouseClicked="#handleLogoutButtonClicked" styleClass="button-light" stylesheets="@../css/main.css" text="LOGOUT" />
+                           </children>
+                        </StackPane>
+                     </children>
+                     <GridPane.margin>
+                        <Insets right="15.0" />
+                     </GridPane.margin>
+                  </FlowPane>
                </children>
-            </StackPane>
-            <Button fx:id="buttonStart" mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" stylesheets="@../css/main.css" text="Start new game" />
-            <TableView fx:id="highscoreTable" editable="true" prefHeight="318.0" prefWidth="880.0" styleClass="highscore-table">
-              <columns>
-                <TableColumn prefWidth="564.8964691162109" text="Team">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="teamName" />
-                    </cellValueFactory>
-                </TableColumn>
-                  <TableColumn minWidth="0.0" prefWidth="144.603515625" text="Level">
-                      <cellValueFactory>
-                          <PropertyValueFactory property="teamLevel" />
-                      </cellValueFactory>
-                  </TableColumn>
-                <TableColumn fx:id="highscoreScore" prefWidth="170.07550048828125" text="Score">
-                    <cellValueFactory>
-                        <PropertyValueFactory property="teamScore" />
-                    </cellValueFactory>
-                </TableColumn>
-              </columns>
-               <VBox.margin>
-                  <Insets bottom="20.0" top="20.0" />
-               </VBox.margin>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-               <effect>
-                  <Blend />
-               </effect>
-            </TableView>
-            <Button mnemonicParsing="false" onMouseClicked="#handleRefreshButtonClicked" stylesheets="@../css/main.css" text="Refresh" />
-            <Button mnemonicParsing="false" onAction="#handleButtonQuitGameClicked" stylesheets="@../css/main.css" text="Quit Game" />
+            </GridPane>
          </children>
-      </VBox>
+      </Group>
+      <Group layoutY="680.0">
+         <children>
+            <Rectangle height="40.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
+            <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="1280.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="40.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <FlowPane alignment="CENTER_LEFT">
+                     <children>
+                        <Label fx:id="labelQuickTip" styleClass="dialog-text" stylesheets="@../css/main.css" text="Waiting for second player …" textFill="WHITE">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </FlowPane>
+                  <ImageView fitHeight="40.0" onMouseClicked="#handleIconCloseClicked" onMouseEntered="#handleIconCloseEntered" onMouseExited="#handleIconCloseExited" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+                     <image>
+                        <Image url="@../images/icon_close.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </GridPane>
+         </children>
+      </Group>
+      <StackPane layoutY="80.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0">
+         <children>
+            <VBox alignment="CENTER" maxWidth="480.0">
+               <StackPane.margin>
+                  <Insets />
+               </StackPane.margin>
+               <children>
+                  <VBox alignment="TOP_CENTER" maxHeight="389.0" maxWidth="480.0">
+                     <children>
+                        <TableView fx:id="highscoreTable" editable="true" stylesheets="@../css/tableview.css">
+                          <columns>
+                            <TableColumn maxWidth="240.0" minWidth="-Infinity" prefWidth="-1.0" text="TEAM">
+                                <cellValueFactory>
+                                    <PropertyValueFactory property="teamName" />
+                                </cellValueFactory>
+                            </TableColumn>
+                              <TableColumn maxWidth="120.0" minWidth="-Infinity" prefWidth="-1.0" text="LEVEL">
+                                  <cellValueFactory>
+                                      <PropertyValueFactory property="teamLevel" />
+                                  </cellValueFactory>
+                              </TableColumn>
+                            <TableColumn fx:id="highscoreScore" maxWidth="120.0" minWidth="-Infinity" prefWidth="-1.0" text="SCORE">
+                                <cellValueFactory>
+                                    <PropertyValueFactory property="teamScore" />
+                                </cellValueFactory>
+                            </TableColumn>
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </VBox>
+                  <Button mnemonicParsing="false" onMouseClicked="#handleRefreshButtonClicked" styleClass="button-dark" stylesheets="@../css/main.css" text="REFRESH DATA">
+                     <VBox.margin>
+                        <Insets top="40.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+         </children>
+      </StackPane>
+      
    </children>
    <stylesheets>
       <URL value="@../css/main.css" />
