--- a/frontend/src/main/resources/puf/frisbee/frontend/view/TopPanel.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/TopPanel.fxml
@@ -16,20 +16,29 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.TopPanelView">
+<AnchorPane xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.TopPanelView">
     <Group>
         <children>
             <Rectangle height="80.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
             <GridPane hgap="20.0" prefHeight="80.0" prefWidth="1280.0">
                 <columnConstraints>
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="975.5" minWidth="10.0" prefWidth="947.5" />
-                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="377.0" minWidth="10.0" prefWidth="312.0" />
+               <ColumnConstraints maxWidth="975.5" minWidth="10.0" prefWidth="138.5" />
+                    <ColumnConstraints maxWidth="999.5" minWidth="10.0" prefWidth="744.5" />
+                    <ColumnConstraints hgrow="SOMETIMES" maxWidth="384.0" minWidth="10.0" prefWidth="360.0" />
                 </columnConstraints>
                 <rowConstraints>
                     <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                 </rowConstraints>
                 <children>
-                    <HBox alignment="CENTER_LEFT" prefHeight="80.0" spacing="40.0">
+               <ImageView pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../images/FrizzbeeFreakz_Logo_TopPanel.png" />
+                  </image>
+                  <GridPane.margin>
+                     <Insets left="10.0" />
+                  </GridPane.margin>
+               </ImageView>
+                    <HBox alignment="CENTER_LEFT" prefHeight="80.0" spacing="40.0" GridPane.columnIndex="1">
                         <children>
                             <VBox alignment="CENTER_LEFT">
                                 <children>
@@ -92,7 +101,7 @@
                             <Insets left="10.0" />
                         </padding>
                     </HBox>
-               <StackPane alignment="CENTER_RIGHT" GridPane.columnIndex="1">
+               <StackPane alignment="CENTER_RIGHT" GridPane.columnIndex="2">
                   <children>
                      <HBox alignment="CENTER_RIGHT" prefHeight="150.0" prefWidth="758.0" spacing="10.0">
                         <children>
