--- a/frontend/src/main/resources/puf/frisbee/frontend/view/BottomPanel.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/BottomPanel.fxml
@@ -2,28 +2,27 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.BottomPanelView">
+<AnchorPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.BottomPanelView">
    <children>
       <Rectangle height="40.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
       <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="1280.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="40.0" />
+          <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label fx:id="labelQuickTip" text="Use up and down arrow keys to jump." textFill="WHITE">
+            <Label fx:id="labelQuickTip" text="Do we get the tips and tricks down here from the database?" textFill="WHITE">
                <font>
                   <Font size="14.0" />
                </font>
@@ -31,11 +30,19 @@
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <ImageView fitHeight="40.0" onMouseClicked="#handleIconCloseClicked" onMouseEntered="#handleIconCloseEntered" onMouseExited="#handleIconCloseExited" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-               <image>
-                  <Image url="@../images/icon_close.png" />
-               </image>
-            </ImageView>
+            <StackPane GridPane.columnIndex="1">
+               <children>
+                  <Rectangle fill="RED" height="40.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="120.0" />
+                  <Label fx:id="labelQuickTip1" onMouseClicked="#handleQuitGameClicked" onMouseEntered="#handleQuitGameEntered" onMouseExited="#handleQuitGameExited" text="Quit Game" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" right="10.0" />
+                     </padding>
+                  </Label>
+               </children>
+            </StackPane>
          </children>
       </GridPane>
    </children>
