--- a/frontend/src/main/resources/puf/frisbee/frontend/view/BottomPanel.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/BottomPanel.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Group?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,40 +11,41 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.BottomPanelView">
+<AnchorPane xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.BottomPanelView">
    <children>
-      <Rectangle height="40.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
-      <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="1280.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <Group>
          <children>
-            <Label fx:id="labelQuickTip" text="Do we get the tips and tricks down here from the database?" textFill="WHITE">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </Label>
-            <StackPane GridPane.columnIndex="1">
+            <Rectangle height="40.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
+            <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="1280.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="NEVER" minWidth="10.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
                <children>
-                  <Rectangle fill="RED" height="40.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="120.0" />
-                  <Label fx:id="labelQuickTip1" onMouseClicked="#handleQuitGameClicked" onMouseEntered="#handleQuitGameEntered" onMouseExited="#handleQuitGameExited" text="Quit Game" textFill="WHITE">
+                  <Label fx:id="labelQuickTip" styleClass="dialog-text" stylesheets="@../css/main.css" text="Do we get the tips and tricks down here from the backend?" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
-                     <padding>
-                        <Insets left="10.0" right="10.0" />
-                     </padding>
                   </Label>
+                  <StackPane GridPane.columnIndex="1">
+                     <children>
+                        <Rectangle fill="RED" height="40.0" opacity="0.5" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="120.0" />
+                        <Label onMouseClicked="#handleQuitGameClicked" onMouseEntered="#handleQuitGameEntered" onMouseExited="#handleQuitGameExited" styleClass="dialog-text" stylesheets="@../css/main.css" text="QUIT GAME" textFill="WHITE">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                           <padding>
+                              <Insets left="10.0" right="10.0" />
+                           </padding>
+                        </Label>
+                     </children>
+                  </StackPane>
                </children>
-            </StackPane>
+            </GridPane>
          </children>
-      </GridPane>
+      </Group>
    </children>
 </AnchorPane>
