--- a/frontend/src/main/resources/puf/frisbee/frontend/view/StartView.fxml
+++ b/frontend/src/main/resources/puf/frisbee/frontend/view/StartView.fxml
@@ -23,6 +23,48 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" xmlns="http://javafx.com/javafx/15" xmlns:fx="http://javafx.com/fxml/1" fx:controller="puf.frisbee.frontend.view.StartView">
    <children>
+      <StackPane layoutY="80.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0">
+         <children>
+            <VBox alignment="CENTER" maxWidth="480.0">
+               <StackPane.margin>
+                  <Insets />
+               </StackPane.margin>
+               <children>
+                  <VBox alignment="TOP_CENTER" maxHeight="389.0" maxWidth="480.0">
+                     <children>
+                        <TableView fx:id="highscoreTable" editable="true" stylesheets="@../css/tableview.css">
+                          <columns>
+                            <TableColumn maxWidth="240.0" minWidth="-Infinity" prefWidth="-1.0" text="TEAM">
+                                <cellValueFactory>
+                                    <PropertyValueFactory property="teamName" />
+                                </cellValueFactory>
+                            </TableColumn>
+                              <TableColumn maxWidth="120.0" minWidth="-Infinity" prefWidth="-1.0" text="LEVEL">
+                                  <cellValueFactory>
+                                      <PropertyValueFactory property="teamLevel" />
+                                  </cellValueFactory>
+                              </TableColumn>
+                            <TableColumn fx:id="highscoreScore" maxWidth="120.0" minWidth="-Infinity" prefWidth="-1.0" text="SCORE">
+                                <cellValueFactory>
+                                    <PropertyValueFactory property="teamScore" />
+                                </cellValueFactory>
+                            </TableColumn>
+                          </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </VBox>
+                  <Button mnemonicParsing="false" onAction="#handleRefreshButtonClicked" styleClass="button-dark" stylesheets="@../css/main.css" text="REFRESH DATA">
+                     <VBox.margin>
+                        <Insets top="40.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+         </children>
+      </StackPane>
       <Group>
          <children>
             <Rectangle height="80.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
@@ -88,7 +130,7 @@
                               </Label>
                            </children>
                         </VBox>
-                        <Button fx:id="buttonStart" mnemonicParsing="false" onMouseClicked="#handleStartButtonClicked" styleClass="button-light" stylesheets="@../css/main.css" text="START PLAYING" />
+                        <Button fx:id="buttonStart" mnemonicParsing="false" onAction="#handleStartButtonClicked" styleClass="button-light" stylesheets="@../css/main.css" text="START PLAYING" />
                      </children>
                      <padding>
                         <Insets left="10.0" />
@@ -103,8 +145,8 @@
                         </Label>
                         <StackPane alignment="CENTER_LEFT">
                            <children>
-                              <Button fx:id="buttonLoginRegister" mnemonicParsing="false" onMouseClicked="#handleLoginRegisterButtonClicked" styleClass="button-light" stylesheets="@../css/main.css" text="LOGIN / REGISTER" />
-                              <Button fx:id="buttonLogout" mnemonicParsing="false" onMouseClicked="#handleLogoutButtonClicked" styleClass="button-light" stylesheets="@../css/main.css" text="LOGOUT" />
+                              <Button fx:id="buttonLoginRegister" mnemonicParsing="false" onAction="#handleLoginRegisterButtonClicked" styleClass="button-light" stylesheets="@../css/main.css" text="LOGIN / REGISTER" />
+                              <Button fx:id="buttonLogout" mnemonicParsing="false" onAction="#handleLogoutButtonClicked" styleClass="button-light" stylesheets="@../css/main.css" text="LOGOUT" />
                            </children>
                         </StackPane>
                      </children>
@@ -116,82 +158,7 @@
             </GridPane>
          </children>
       </Group>
-      <Group layoutY="680.0">
-         <children>
-            <Rectangle height="40.0" opacity="0.8" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="1280.0" />
-            <GridPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="1280.0">
-               <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="NEVER" minWidth="10.0" prefWidth="40.0" />
-               </columnConstraints>
-               <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-               </rowConstraints>
-               <children>
-                  <FlowPane alignment="CENTER_LEFT">
-                     <children>
-                        <Label fx:id="labelQuickTip" styleClass="dialog-text" stylesheets="@../css/main.css" text="Do we get the tips and tricks down here from the database?" textFill="WHITE">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                           <padding>
-                              <Insets left="10.0" />
-                           </padding>
-                        </Label>
-                     </children>
-                  </FlowPane>
-                  <ImageView fitHeight="40.0" onMouseClicked="#handleIconCloseClicked" onMouseEntered="#handleIconCloseEntered" onMouseExited="#handleIconCloseExited" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
-                     <image>
-                        <Image url="@../images/icon_close.png" />
-                     </image>
-                  </ImageView>
-               </children>
-            </GridPane>
-         </children>
-      </Group>
-      <StackPane layoutY="80.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1280.0">
-         <children>
-            <VBox alignment="CENTER" maxWidth="480.0">
-               <StackPane.margin>
-                  <Insets />
-               </StackPane.margin>
-               <children>
-                  <VBox alignment="TOP_CENTER" maxHeight="389.0" maxWidth="480.0">
-                     <children>
-                        <TableView fx:id="highscoreTable" editable="true" stylesheets="@../css/tableview.css">
-                          <columns>
-                            <TableColumn maxWidth="240.0" minWidth="-Infinity" prefWidth="-1.0" text="TEAM">
-                                <cellValueFactory>
-                                    <PropertyValueFactory property="teamName" />
-                                </cellValueFactory>
-                            </TableColumn>
-                              <TableColumn maxWidth="120.0" minWidth="-Infinity" prefWidth="-1.0" text="LEVEL">
-                                  <cellValueFactory>
-                                      <PropertyValueFactory property="teamLevel" />
-                                  </cellValueFactory>
-                              </TableColumn>
-                            <TableColumn fx:id="highscoreScore" maxWidth="120.0" minWidth="-Infinity" prefWidth="-1.0" text="SCORE">
-                                <cellValueFactory>
-                                    <PropertyValueFactory property="teamScore" />
-                                </cellValueFactory>
-                            </TableColumn>
-                          </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                     </children>
-                  </VBox>
-                  <Button mnemonicParsing="false" onMouseClicked="#handleRefreshButtonClicked" styleClass="button-dark" stylesheets="@../css/main.css" text="REFRESH DATA">
-                     <VBox.margin>
-                        <Insets top="40.0" />
-                     </VBox.margin>
-                  </Button>
-               </children>
-            </VBox>
-         </children>
-      </StackPane>
-      
+      <fx:include fx:id="bottomPanel" layoutY="680.0" source="BottomPanel.fxml" />
    </children>
    <stylesheets>
       <URL value="@../css/main.css" />
